--- a/rsa.ipynb
+++ b/rsa.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Open in Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/chengzhongkai/chengzhongkai/blob/main/rsa.ipynb)\n",
+    "\n",
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/chengzhongkai/chengzhongkai/blob/main/rsa.ipynb) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -14,6 +24,7 @@
     }
    ],
    "source": [
+    "\n",
     "import base64\n",
     "\n",
     "text = '~~~ Hello? ~~~'\n",
